# sdk-python

./: .gitignore  LICENSE  README.md  poc.py  pyproject.toml  setup.py  test-sdk-verification.py
citizenofthecloud/: __init__.py  fastapi.py
examples/: poc.py  test-sdk-verification.py
